--- a/Roshambo/Roshambo/Base.lproj/Main.storyboard
+++ b/Roshambo/Roshambo/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.43658322704081631" green="0.18743078851675438" blue="0.022856346817438873" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="NR2-uT-Xex"/>
                     <connections>
@@ -106,7 +106,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-261" y="62"/>
+            <point key="canvasLocation" x="29" y="36"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
